fix: navigation first element hidden on mobile
- Restructured menu template logic to conditionally render right menu section only when CTA or language options exist
- Fixed menu layout to prevent empty right menu div when no content is present

--- a/wordpress/wp-content/themes/les-verts/styleguide/src/components/molecules/m-menu/m-menu.scss
+++ b/wordpress/wp-content/themes/les-verts/styleguide/src/components/molecules/m-menu/m-menu.scss
@@ -133,6 +133,12 @@
 	&__nav {
 		@include m.media(v.$DESKTOP) {
 			width: calc(100% - 54vw);
+
+			&--no-menu-right {
+				width: 100%;
+				max-width: 800px;
+				margin: 0 auto;
+			}
 		}
 
 		@include m.media(v.$MOBILE) {
